footer layout issues

--- a/root/webapp/app/styles/patientview/sass/ie.scss
+++ b/root/webapp/app/styles/patientview/sass/ie.scss
@@ -15,6 +15,8 @@
 
     .hero-panel{
         overflow:hidden;
+        position:relative;
+
         .ie-hero-image{
             display:block;
             position: absolute;
